fix(ui): More contrast on text in searchbar in dark mode (#15742)

--- a/weblate/static/style-dark.css
+++ b/weblate/static/style-dark.css
@@ -2942,3 +2942,7 @@ tbody.warning {
 .has-changes {
   border: 1px solid #dabc87 !important;
 }
+
+.navbar-form .form-control {
+  color: #d9d3cc;
+}
